Layout problems fixed

--- a/styles/light.css
+++ b/styles/light.css
@@ -47,7 +47,7 @@
     --accent-color: #ff8dcb; 
     --button-text-color: #353430; 
     --button-border-color: #353430; 
-    --button-border-hover-color: rgba(50, 49, 45, 0.40);
+    --button-border-hover-color: #32312d66;
     --decoration-color: #353430;
     }
 
